--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3",
-    "whatwg-fetch": "^3.2.0"
+    "whatwg-fetch": "^3.2.0",
+    "workbox-webpack-plugin": "^6.1.5"
   },
   "dependencies": {
     "@splidejs/splide": "^2.4.21",
@@ -55,6 +56,12 @@
     "js-cookie": "^2.2.1",
     "lazysizes": "^5.3.1",
     "regenerator-runtime": "^0.13.7",
-    "serviceworker-webpack-plugin": "^1.0.1"
+    "serviceworker-webpack-plugin": "^1.0.1",
+    "workbox-core": "^6.1.5",
+    "workbox-expiration": "^6.1.5",
+    "workbox-precaching": "^6.1.5",
+    "workbox-routing": "^6.1.5",
+    "workbox-strategies": "^6.1.5",
+    "workbox-window": "^6.1.5"
   }
 }
