--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "build-image": "node sharp.js",
+    "bundle-report": "webpack-bundle-analyzer --port 4200 dist/stats.json",
     "lint": "eslint ./src",
     "test": "karma start",
     "e2e": "codeceptjs run --steps"
@@ -17,6 +18,7 @@
     "@babel/core": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "codeceptjs": "^3.0.5",
     "copy-webpack-plugin": "^6.0.2",
     "css-loader": "^3.6.0",
@@ -35,7 +37,7 @@
     "sharp": "^0.28.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.46.0",
-    "webpack-bundle-analyzer": "^4.4.0",
+    "webpack-bundle-analyzer": "^4.4.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3",
