--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "idb": "^6.0.0",
     "js-cookie": "^2.2.1",
     "lazysizes": "^5.3.1",
+    "macy": "^2.5.1",
     "regenerator-runtime": "^0.13.7",
     "workbox-core": "^6.1.5",
     "workbox-expiration": "^6.1.5",
