--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 node_modules
 package-lock.json
+src
+.eslint.json
+.gitignore
+package.json
+webpack.common.js
+webpack.dev.js
+webpack.prod.js
+yarn.lock
